# Niuma-deepsearch

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  cli.py  config.yaml  pyproject.toml
agent_os/: __init__.py  agent_os.py  config.py
agent_os/core/: __init__.py  event_bus.py  filesystem.py  session.py
agent_os/ingest/: __init__.py  mineru.py
agent_os/kernel/: __init__.py  agent_loop.py  display.py  event_types.py  helpers.py  result_filter.py  sub_agent.py
agent_os/memory/: __init__.py  embedding.py  (+3 more)
docs/: 01_legal_case_lifecycle.md  02_stage_definitions.md  03_event_interrupt_catalog.md  04_lawyer_work_principles.md  06_custody_field_exercise_output.json  ARCHITECTURE.md  PROJECT.md  民事诉讼全流程指引.md
legal/: DESCRIPTION.md
research/: DESCRIPTION.md
scripts/: agent_loop_validation.py  batch_test.txt  e2e_full.py  e2e_validation.py  feishu_validation.py  legal_test.txt  rerun_failed.py  run_browsecomp_eval.py  run_selected.py  test_filter_minimal.py
tests/: test_academic.py  test_cli_display.py  test_compression_context.py  test_deepseek_reasoning_roundtrip.py  test_legal_case_skill.py  test_memory_kv_cache.py  test_openalex_tools.py  test_provider_errors.py  test_research_state_tool.py  test_search_tools.py  test_session_listing.py  test_short_answer_research_protocol.py  test_skills_index.py  test_spawn_tool.py  test_tool_registration.py  test_tui_runtime.py  test_upload_parse_security.py  test_web_read_pdf.py  test_wikipedia_lookup.py  test_workspace_chain.py
tui/: __init__.py  app.py  event_bridge.py  run.py  screen.py  theme.tcss
(+80 files in other folders)
